--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <nav>
       <ul id="list">
-        <li>Home</li>
+        <li id="active">Home</li>
         <li>Store</li>
         <li>About Us</li>
         <li>Contact</li>
