--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <nav>
       <ul id="list">
         <li id="active">Home</li>
-        <li>Store</li>
+        <li onclick="location.href='StorePage.html'">Store</li>
         <li>About Us</li>
         <li>Contact</li>
       </ul>
@@ -19,3 +19,4 @@
     </div>
   </body>
 </html>
+
