--- a/StorePage.html
+++ b/StorePage.html
@@ -3,6 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="StorePageStyle.css">
         <link rel="stylesheet" href="index.html">
+        <title>Store</title>
     </head>
 
     <body>
@@ -10,7 +11,7 @@
             <li onclick="location.href='index.html'">Home</li>
             <li id="active">Store</li>
             <li onclick="location.href='aboutus.html'">About Us</li>
-            <li>Contact</li>
+            <li onclick="location.href='contact.html'">Contact</li>
           </ul>
         </nav>
         
